--- a/.condarc
+++ b/.condarc
@@ -3,16 +3,16 @@ channels:
   - defaults
 show_channel_urls: true
 default_channels:
-  - https://mirrors.aliyun.com/anaconda/pkgs/main
-  - https://mirrors.aliyun.com/anaconda/pkgs/r
-  - https://mirrors.aliyun.com/anaconda/pkgs/msys2
+  - https://mirrors.sustech.edu.cn/anaconda/pkgs/main
+  - https://mirrors.sustech.edu.cn/anaconda/pkgs/free
+  - https://mirrors.sustech.edu.cn/anaconda/pkgs/r
+  - https://mirrors.sustech.edu.cn/anaconda/pkgs/msys2
 custom_channels:
-  conda-forge: https://mirrors.aliyun.com/anaconda/cloud
-  msys2: https://mirrors.aliyun.com/anaconda/cloud
-  bioconda: https://mirrors.aliyun.com/anaconda/cloud
-  menpo: https://mirrors.aliyun.com/anaconda/cloud
-  pytorch: https://mirrors.aliyun.com/anaconda/cloud
-  simpleitk: https://mirrors.aliyun.com/anaconda/cloud
-  Paddle: https://mirrors.aliyun.com/anaconda/cloud
-env_prompt: ({name})
+  conda-forge: https://mirrors.sustech.edu.cn/anaconda/cloud
+  msys2: https://mirrors.sustech.edu.cn/anaconda/cloud
+  intel: https://mirrors.sustech.edu.cn/anaconda/cloud
+  pytorch: https://mirrors.sustech.edu.cn/anaconda/cloud
+  Paddle: https://mirrors.sustech.edu.cn/anaconda/cloud
+  nvidia: https://mirrors.sustech.edu.cn/anaconda-extra/cloud
+env_prompt: "({name}) "
 report_errors: true
