--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{json,tex,html,xml,css}]
+[*.{tex,html,xml,css}]
 tab_width = 2
 
 [*.{json,yaml,yml,md,py,pxd,pyi,pyx}]
